# c-file-tagger

./: .gitignore  LICENSE  README.md  meson.build  meson.options
bash/: cft  meson.build
examples/: README.md  tofi-bg.sh  wp.sh
src/: Makefile  TODO.md  arg.c  arg.h  attr.h  callgrind.out.7105  callgrind.sh  cft.c  cft.h  cft.out.version  cft.version  colorprint.h  err.h  err.h_old  file.c  file.h  gmon.out  grind.sh  info.c  info.h  lookup.c  lookup.h  lut.h  lutd.h  luts.h.ignore  main.c  main.py  meson.build  parse.h  platform.c  platform.h  platform_detect.h  prof.sh  rand64.h  run.sh  screen.c  screen.h  slice.c  slice.h  str.c  (+12 more)
